--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html",
+    "build": "parcel build *.html",
     "predeploy": "npm run build",
     "deploy": "surge valentine-victor.surge.sh"
   },
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "jquery": "^3.4.1",
     "scrollreveal": "^4.0.6"
   }
 }
